force-app/main/default/objects/MS_Teams_Sync_Log__c/MS_Teams_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>Records integration attempts, outcomes, and retry scheduling. Do not store credentials or full response payloads.</description>
    <label>MS Teams Sync Log</label>
    <nameField>
        <displayFormat>TSL-{00000000}</displayFormat>
        <label>Sync Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Teams Sync Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>