force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Async_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_ID__c</fullName>
    <label>Async Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>