force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <description>One-based attempt number. Each retry creates a separate log entry.</description>
    <label>Attempt Number</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>