force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>