force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Redacted diagnostic summary only; exclude tokens, secrets, chat content, and Graph response bodies.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>