force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Graph_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Graph_Request_ID__c</fullName>
    <label>Graph Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>