force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Meeting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Schedule</label>
    <referenceTo>MS_Team_Call_Schedule__c</referenceTo>
    <relationshipLabel>MS Teams Sync Logs</relationshipLabel>
    <relationshipName>MS_Teams_Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>