force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Meeting</fullName>
            </value>
            <value>
                <fullName>Update Meeting</fullName>
            </value>
            <value>
                <fullName>Cancel Meeting</fullName>
            </value>
            <value>
                <fullName>Delete Meeting</fullName>
            </value>
            <value>
                <fullName>Sync Meeting</fullName>
            </value>
            <value>
                <fullName>Sync Attendance</fullName>
            </value>
            <value>
                <fullName>Sync Artifacts</fullName>
            </value>
            <value>
                <fullName>Sync Chat</fullName>
            </value>
            <value>
                <fullName>Create Subscription</fullName>
            </value>
            <value>
                <fullName>Renew Subscription</fullName>
            </value>
            <value>
                <fullName>Process Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>