force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Records_Processed__c</fullName>
    <label>Records Processed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>