force-app/main/default/objects/MS_Teams_Sync_Log__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>MS_Graph_Subscription__c</referenceTo>
    <relationshipLabel>MS Teams Sync Logs</relationshipLabel>
    <relationshipName>MS_Teams_Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>